# MCNetwork

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENCE  MCnetwork  Makefile  README.md  cmake_install.cmake  in.txt  test.py
data/: device.txt  in.txt
doc/: doxyfile
doc/html/: annotated.html  classDataFile.html  classFiniteElementeBase.html  classFiniteElementeBase__inherit__graph.map  classFiniteElementeBase__inherit__graph.md5  classFiniteElementeCircle.html  classFiniteElementeCircle__coll__graph.md5  classFiniteElementeCircle__inherit__graph.map  classFiniteElementeCircle__inherit__graph.md5  classFiniteElementeRect.html  classFiniteElementeRect__coll__graph.map  classFiniteElementeRect__coll__graph.md5  classFiniteElementeRect__inherit__graph.md5  classJob.html  classJobManager.html  classOptimizer.html  classOptimizer__coll__graph.map  classOptimizer__coll__graph.md5  classParameterStorage.html  classSystem.html  classes.html  classmyDebugger.html  datafile_8h_source.html  debug_8h_source.html  dir_0a2753862a31c62180ddfc552e5e654e.html  dir_321cb8fcd5d4a0287fe6e2089cac6a54.html  dir_649fc674995b93dd8103c699acd1f3ac.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a4b3ba9ac3f95be88c56c45bb0eccb73.html  dir_c55c48bbf03f8fd40e0af6cb6092d21b.html  dir_d501334aeb1b78ad67cd3c72c37b1e87.html  dir_f6d003d2ad6ea0f4db5ea2c266d841ae.html  enhance_8hpp_source.html  files.html  finiteElemente_8h_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  (+25 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  (+16 more)
doc/latex/: annotated.tex  classDataFile.tex  classFiniteElementeBase.tex  classFiniteElementeBase__inherit__graph.md5  classFiniteElementeCircle.tex  classFiniteElementeCircle__coll__graph.md5  classFiniteElementeCircle__inherit__graph.md5  classFiniteElementeRect.tex  classFiniteElementeRect__coll__graph.md5  classFiniteElementeRect__inherit__graph.md5  classJob.tex  classJobManager.tex  classOptimizer.tex  classOptimizer__coll__graph.md5  classParameterStorage.tex  classSystem.tex  classmyDebugger.tex  dir_0a2753862a31c62180ddfc552e5e654e.tex  dir_321cb8fcd5d4a0287fe6e2089cac6a54.tex  dir_649fc674995b93dd8103c699acd1f3ac.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_a4b3ba9ac3f95be88c56c45bb0eccb73.tex  dir_c55c48bbf03f8fd40e0af6cb6092d21b.tex  dir_d501334aeb1b78ad67cd3c72c37b1e87.tex  dir_f6d003d2ad6ea0f4db5ea2c266d841ae.tex  hierarchy.tex  index.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structElectrodeParameters.tex
finiteElements/: ._sync_752a7d21812f.db  CMakeLists.txt  finiteElemente.cpp  finiteElemente.h  main.cpp
lib/: CMakeLists.txt  enhance.cpp  enhance.hpp
lib/enhance/: enhance.cpp  enhance.hpp
lib/finiteElemente/: finiteElemente.cpp  finiteElemente.h  main.cpp
scripts/: IV.py  analyse.sh  analyse_same_inputs.py  analyse_total.py  analyze_uncertainty.py  convergence.py  convergenceCompare.py  copyBestVoltage.py  findCritEnergy.py  makeSwappHist.py  plotCurrents.py  plotDevice.py  readCurrentsConverge.py  readFitness.py  readSwapps.py  seperateFintess.py  seperateFintess_2D.py  testing.py  tools.py  trajectories.py
src/: datafile.cpp  datafile.h  debug.cpp  debug.h  main.cpp  parameterstorage.cpp  parameterstorage.h
src/system/: dopant.cpp  dopant.h  hoppingSite.cpp  hoppingSite.h  jobhandling.cpp  jobhandling.h  mchost.cpp  mchost.h  optimizer.cpp  optimizer.h  system.cpp  system.h
